download links, etc

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -1,5 +1,10 @@
 \documentclass{beamer}
 \usetheme{default}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=cyan
+}
 
 \title{Temoc Offensive}
 \subtitle{A temoc- and space- themed shooter}
@@ -114,6 +119,16 @@ This game was built in Unity. We used some of Unity's free texture pack along wi
 In addition to Unity Editor, we used Visual Studio Code for the development, and tracked our changes in Git for collaboration.
 \end{frame}
 
+\subsection{Asset Packs Used}
+\begin{frame}
+\frametitle{Asset Packs Used}
+    \begin{itemize}
+        \item \href{https://assetstore.unity.com/packages/2d/textures-materials/nature/terrain-textures-pack-free-139542}{Terrain Textures Pack Free}
+        \item \href{https://assetstore.unity.com/packages/2d/textures-materials/sky/allsky-free-10-sky-skybox-set-146014}{AllSky Free - 10 Sky / Skybox Set}
+        \item \href{https://assetstore.unity.com/packages/3d/environments/polygon-sampler-pack-207048}{Polygon Sampler Pack}
+    \end{itemize}
+\end{frame}
+
 \section{Development Status}
 
 \subsection{Current Status}
@@ -167,9 +182,7 @@ We have many ideas and plans to improve our game from here, including:
 
 \begin{frame}
 \frametitle{Live Demonstration}
-It is time for a live demonstration! You can join the game!
-
-    Download links have been posted in the class Discord server. Or, download for Windows at (insert link) or Linux at (insert link)
+    It is time for a live demonstration! You can join the game! Linux and Windows builds are available for download at \href{https://utdallas.box.com/s/q7e6fjieyb50r23selvv29iurs2q6z3z}{https://utdallas.box.com/s/q7e6fjieyb50r23selvv29iurs2q6z3z}. This link has also been posted in the class Discord server.
 \end{frame}
 
 \section{Questions?}
