add team number

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -8,7 +8,7 @@
 
 \title{Temoc Offensive}
 \subtitle{A temoc- and space- themed shooter}
-\author{Ethan Usrey, Daniel Yahalom, Agastya Bose, Timothy Sweet}
+\author{Team 15: Ethan Usrey, Daniel Yahalom, Agastya Bose, Timothy Sweet}
 \institute{The University of Texas at Dallas}
 \date{\today}
 
